rhacm-root/subscriptions/vault/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault
  annotations:
    openshift.io/display-name: Hashicorp Vault Server
