rhacm-root/subscriptions/vault/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: vault
  namespace: vault
spec:
  port:
    targetPort: http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: vault-active
    weight: 100
  wildcardPolicy: None
